Revised Contact Items layout, added Models for Sharing Groups and Items, Fixed errors in Models and Migrations. All Contact Apps are being created correctly.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@
 	background-color: #2e4053;
 }
 
+
 #itemsDisplay{
 	/*background-color: #e5e8e8;*/
 	background-color: #f2f4f4; 
@@ -19,5 +20,14 @@
 
 .itemTypePanel {
 	background-color:  #d0d3d4;
-	
+}
+
+.createPanel{
+	background-color:#3a5068;
+	margin: 15px;
+}
+
+.createAppPanel{
+	background-color:#d0e0dd;
+	margin: 15px;
 }
