--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,12 +13,15 @@
 }
 
 .uk-logo{
-	background-color: #48c9b0;
 	justify-content: flex-start;
 }
 
 .itemTypePanel {
 	background-color:  #d0d3d4;
+}
+
+.itemTypePanel:hover {
+	background-color:  #c0c5c6;
 }
 
 .createPanel{
@@ -28,4 +31,8 @@
 
 .appSelect:hover{
 	background-color:  #d6dbdf;
+}
+
+.topNav, .uk-navbar-container {
+	background-color: #2b7575 !important;
 }
