Added teams, editing and deleting item apps, changes to layouts and ui

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,8 +12,16 @@
 	background-color: #34495e;
 }
 
+.selected{
+	background-color: #3a5068;
+}
+
 .uk-logo{
 	justify-content: flex-start;
+}
+
+.breadcrumbsPanel {
+	background-color:  #2b5275;
 }
 
 .itemTypePanel {
